feat(homepage): move requesters to its own section

--- a/homepage/base/config/services.yaml
+++ b/homepage/base/config/services.yaml
@@ -17,6 +17,7 @@
       siteMonitor: https://audiobookshelf.lanjian.io
       description: Audiobook and podcast media server.
 
+- Requesters:
   - Jellyseerr:
       icon: jellyseerr.png
       href: https://jellyseerr.lanjian.io
