fix(homepage): increase number of columns

--- a/homepage/base/config/settings.yaml
+++ b/homepage/base/config/settings.yaml
@@ -1,12 +1,2 @@
-#background:
-  #image: /images/ac1.jpg
-  #opacity: 20
-
-#color: zinc
-
-#layout:
-  #Media:
-    #style: row
-    #columns: 5
-
 headerStyle: boxedWidgets
+maxGroupColumns: 8
